[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Keaton Brandt <keaton.brandt@gmail.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
bit-set = "0.5.3"
nom = "7.1.1"
num_enum = "0.5.7"
pico-args = "0.5.0"
